// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main snapshot renders 1`] = `
<div>
  <ConfigLayout
    settings={
      <Panel
        configuration={
          Object {
            "dragAndDrop": Object {
              "enabled": false,
              "label": "Enable Drag and Drop",
              "settings": false,
            },
            "showDescription": Object {
              "enabled": false,
              "label": "Show Description",
              "settings": true,
            },
            "showExcludeZero": Object {
              "enabled": false,
              "label": "Exclude Zero",
              "settings": true,
            },
            "showHalfScoring": Object {
              "enabled": false,
              "label": "Half Scoring",
              "settings": true,
            },
            "showLevelTagInput": Object {
              "enabled": false,
              "label": "Show Level Tag Input",
              "settings": true,
            },
            "showScorePointLabels": Object {
              "enabled": false,
              "label": "Show Score Point Labels",
              "settings": true,
            },
            "showStandards": Object {
              "enabled": false,
              "label": "Show Standards",
              "settings": false,
            },
            "showVisibleToStudent": Object {
              "enabled": false,
              "label": "Visible to Student",
              "settings": true,
            },
          }
        }
        groups={
          Object {
            "Properties": Object {
              "description": undefined,
              "pointLabels": undefined,
            },
            "Settings": Object {
              "dragAndDrop.enabled": false,
              "excludeZero": undefined,
              "halfScoring": undefined,
              "showLevelTagInput.enabled": undefined,
              "standards": false,
              "visibleToStudent": undefined,
            },
          }
        }
        model={
          Object {
            "description": false,
            "element": "multi-trait-rubric",
            "excludeZero": true,
            "halfScoring": false,
            "id": "1",
            "pointLabels": true,
            "scales": Array [
              Object {
                "maxPoints": 4,
                "scorePointsLabels": Array [
                  "Non-Scorable",
                  "Developing",
                  "Progressing",
                  "Effective",
                  "Strong",
                ],
                "traitLabel": "Trait",
                "traits": Array [
                  Object {
                    "description": "the main message",
                    "name": "Ideas",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Topic undefined and/or difficult to follow

Details are unclear",
                      "Topic too broad

Details are limited",
                      "Writing stays on topic

Complete details given",
                      "Strong control of topic

Relevant, accurate, specific details that support topic",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the internal structure of the piece",
                    "name": "Organization",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Does not have a beginning, middle and/or end

Does not have a lead and/or conclusion

Transitions confusing and/or not present

Not written in logical order

No sign of paragraphing / incorrect paragraphing",
                      "Weak beginning, middle and end

Has evidence of a lead and/or conclusion but missing elements

Transitions are used sometimes

Some logical order

Most paragraphing incorrect",
                      "Has an acceptable beginning, middle and end

Includes a lead and conclusion

Transitions are used correctly

Mostly logical order

Mostly correct paragraphing",
                      "Has an effective beginning, middle and end

Powerful introduction / lead and conclusion

Effective transitions

Logical order / sequencing

Uses appropriate paragraphing",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the vocabulary a writer chooses to convey meaning",
                    "name": "Word Choice",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Vocabulary is limited/used incorrectly

No figurative language; words do not convey meaning",
                      "Generally correct words

Attempt at figurative language

and/or words convey general meaning",
                      "Some active verbs and precise nouns

Effective use of figurative language and/or words that enhance meaning",
                      "Powerful and engaging words

Artful use of figurative language and/or sensory detail",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the rhythm and flow of the language",
                    "name": "Sentence Fluency",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "No sentences are clear

No variety in sentence structure

Frequent run-ons and/or fragments are present",
                      "Some sentences are clear

Sentence variety used rarely

Some run-ons and/or fragments are present",
                      "Most sentences are clear

Some sentence variety is used

Run-ons and/or fragments are rare",
                      "All Sentences are clear

Variety of sentence structure is used

Run-ons and/or fragments are not present",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the mechanical correctness",
                    "name": "Conventions",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Many distracting errors are present in grammar, punctuation, capitalization and/or spelling",
                      "Errors in grammar, punctuation, capitalization and/or spelling are present and some distract from meaning",
                      "Errors in grammar, punctuation, capitalization and/or spelling are present but don’t distract from meaning",
                      "Few errors in grammar, punctuation,

capitalization and/or spelling",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the personal tone and flavor of the author's message",
                    "name": "Voice",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Not concerned with audience or purpose

No viewpoint (perspective) used

Writing is mechanical and lifeless",
                      "Shows beginning awareness of audience/purpose

Some viewpoint (perspective) used throughout the piece

Writing is distant, too formal or informal",
                      "Awareness of audience; purpose is clear most of the time

Uses viewpoint (perspective) throughout most of the paper

Writing is pleasant, agreeable and satisfying",
                      "Powerful connection with audience; purpose is clearly communicated

Maintains strong viewpoint (perspective) throughout entire piece

Writing is expressive, engaging and has lots of energy",
                    ],
                    "standards": Array [],
                  },
                ],
              },
              Object {
                "maxPoints": 2,
                "scorePointsLabels": Array [
                  "Non-Scorable",
                  "Unsatisfactory",
                  "Satisfactory",
                ],
                "traitLabel": "Category",
                "traits": Array [
                  Object {
                    "description": "",
                    "name": "Presentation",
                    "scorePointsDescriptors": Array [
                      "Handwriting is unreadable, or response is blank, not in English, or too brief to evaluate. ",
                      "Handwriting poor

Overall appearance is distracting to unacceptable",
                      "Handwriting is generally legible

Overall appearance is acceptable or better",
                    ],
                    "standards": Array [],
                  },
                ],
              },
            ],
            "standards": false,
            "visibleToStudent": true,
          }
        }
        onChangeModel={[Function]}
      />
    }
  >
    <div
      style={
        Object {
          "width": "730px",
        }
      }
    >
      <WithStyles(Scale)
        classes={Object {}}
        configuration={
          Object {
            "dragAndDrop": Object {
              "enabled": false,
              "label": "Enable Drag and Drop",
              "settings": false,
            },
            "showDescription": Object {
              "enabled": false,
              "label": "Show Description",
              "settings": true,
            },
            "showExcludeZero": Object {
              "enabled": false,
              "label": "Exclude Zero",
              "settings": true,
            },
            "showHalfScoring": Object {
              "enabled": false,
              "label": "Half Scoring",
              "settings": true,
            },
            "showLevelTagInput": Object {
              "enabled": false,
              "label": "Show Level Tag Input",
              "settings": true,
            },
            "showScorePointLabels": Object {
              "enabled": false,
              "label": "Show Score Point Labels",
              "settings": true,
            },
            "showStandards": Object {
              "enabled": false,
              "label": "Show Standards",
              "settings": false,
            },
            "showVisibleToStudent": Object {
              "enabled": false,
              "label": "Visible to Student",
              "settings": true,
            },
          }
        }
        enableDragAndDrop={false}
        excludeZero={true}
        key="scale-0"
        model={
          Object {
            "description": false,
            "element": "multi-trait-rubric",
            "excludeZero": true,
            "halfScoring": false,
            "id": "1",
            "pointLabels": true,
            "scales": Array [
              Object {
                "maxPoints": 4,
                "scorePointsLabels": Array [
                  "Non-Scorable",
                  "Developing",
                  "Progressing",
                  "Effective",
                  "Strong",
                ],
                "traitLabel": "Trait",
                "traits": Array [
                  Object {
                    "description": "the main message",
                    "name": "Ideas",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Topic undefined and/or difficult to follow

Details are unclear",
                      "Topic too broad

Details are limited",
                      "Writing stays on topic

Complete details given",
                      "Strong control of topic

Relevant, accurate, specific details that support topic",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the internal structure of the piece",
                    "name": "Organization",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Does not have a beginning, middle and/or end

Does not have a lead and/or conclusion

Transitions confusing and/or not present

Not written in logical order

No sign of paragraphing / incorrect paragraphing",
                      "Weak beginning, middle and end

Has evidence of a lead and/or conclusion but missing elements

Transitions are used sometimes

Some logical order

Most paragraphing incorrect",
                      "Has an acceptable beginning, middle and end

Includes a lead and conclusion

Transitions are used correctly

Mostly logical order

Mostly correct paragraphing",
                      "Has an effective beginning, middle and end

Powerful introduction / lead and conclusion

Effective transitions

Logical order / sequencing

Uses appropriate paragraphing",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the vocabulary a writer chooses to convey meaning",
                    "name": "Word Choice",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Vocabulary is limited/used incorrectly

No figurative language; words do not convey meaning",
                      "Generally correct words

Attempt at figurative language

and/or words convey general meaning",
                      "Some active verbs and precise nouns

Effective use of figurative language and/or words that enhance meaning",
                      "Powerful and engaging words

Artful use of figurative language and/or sensory detail",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the rhythm and flow of the language",
                    "name": "Sentence Fluency",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "No sentences are clear

No variety in sentence structure

Frequent run-ons and/or fragments are present",
                      "Some sentences are clear

Sentence variety used rarely

Some run-ons and/or fragments are present",
                      "Most sentences are clear

Some sentence variety is used

Run-ons and/or fragments are rare",
                      "All Sentences are clear

Variety of sentence structure is used

Run-ons and/or fragments are not present",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the mechanical correctness",
                    "name": "Conventions",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Many distracting errors are present in grammar, punctuation, capitalization and/or spelling",
                      "Errors in grammar, punctuation, capitalization and/or spelling are present and some distract from meaning",
                      "Errors in grammar, punctuation, capitalization and/or spelling are present but don’t distract from meaning",
                      "Few errors in grammar, punctuation,

capitalization and/or spelling",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the personal tone and flavor of the author's message",
                    "name": "Voice",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Not concerned with audience or purpose

No viewpoint (perspective) used

Writing is mechanical and lifeless",
                      "Shows beginning awareness of audience/purpose

Some viewpoint (perspective) used throughout the piece

Writing is distant, too formal or informal",
                      "Awareness of audience; purpose is clear most of the time

Uses viewpoint (perspective) throughout most of the paper

Writing is pleasant, agreeable and satisfying",
                      "Powerful connection with audience; purpose is clearly communicated

Maintains strong viewpoint (perspective) throughout entire piece

Writing is expressive, engaging and has lots of energy",
                    ],
                    "standards": Array [],
                  },
                ],
              },
              Object {
                "maxPoints": 2,
                "scorePointsLabels": Array [
                  "Non-Scorable",
                  "Unsatisfactory",
                  "Satisfactory",
                ],
                "traitLabel": "Category",
                "traits": Array [
                  Object {
                    "description": "",
                    "name": "Presentation",
                    "scorePointsDescriptors": Array [
                      "Handwriting is unreadable, or response is blank, not in English, or too brief to evaluate. ",
                      "Handwriting poor

Overall appearance is distracting to unacceptable",
                      "Handwriting is generally legible

Overall appearance is acceptable or better",
                    ],
                    "standards": Array [],
                  },
                ],
              },
            ],
            "standards": false,
            "visibleToStudent": true,
          }
        }
        onScaleChanged={[Function]}
        onScaleRemoved={[Function]}
        scale={
          Object {
            "maxPoints": 4,
            "scorePointsLabels": Array [
              "Non-Scorable",
              "Developing",
              "Progressing",
              "Effective",
              "Strong",
            ],
            "traitLabel": "Trait",
            "traits": Array [
              Object {
                "description": "the main message",
                "name": "Ideas",
                "scorePointsDescriptors": Array [
                  "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                  "Topic undefined and/or difficult to follow

Details are unclear",
                  "Topic too broad

Details are limited",
                  "Writing stays on topic

Complete details given",
                  "Strong control of topic

Relevant, accurate, specific details that support topic",
                ],
                "standards": Array [],
              },
              Object {
                "description": "the internal structure of the piece",
                "name": "Organization",
                "scorePointsDescriptors": Array [
                  "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                  "Does not have a beginning, middle and/or end

Does not have a lead and/or conclusion

Transitions confusing and/or not present

Not written in logical order

No sign of paragraphing / incorrect paragraphing",
                  "Weak beginning, middle and end

Has evidence of a lead and/or conclusion but missing elements

Transitions are used sometimes

Some logical order

Most paragraphing incorrect",
                  "Has an acceptable beginning, middle and end

Includes a lead and conclusion

Transitions are used correctly

Mostly logical order

Mostly correct paragraphing",
                  "Has an effective beginning, middle and end

Powerful introduction / lead and conclusion

Effective transitions

Logical order / sequencing

Uses appropriate paragraphing",
                ],
                "standards": Array [],
              },
              Object {
                "description": "the vocabulary a writer chooses to convey meaning",
                "name": "Word Choice",
                "scorePointsDescriptors": Array [
                  "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                  "Vocabulary is limited/used incorrectly

No figurative language; words do not convey meaning",
                  "Generally correct words

Attempt at figurative language

and/or words convey general meaning",
                  "Some active verbs and precise nouns

Effective use of figurative language and/or words that enhance meaning",
                  "Powerful and engaging words

Artful use of figurative language and/or sensory detail",
                ],
                "standards": Array [],
              },
              Object {
                "description": "the rhythm and flow of the language",
                "name": "Sentence Fluency",
                "scorePointsDescriptors": Array [
                  "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                  "No sentences are clear

No variety in sentence structure

Frequent run-ons and/or fragments are present",
                  "Some sentences are clear

Sentence variety used rarely

Some run-ons and/or fragments are present",
                  "Most sentences are clear

Some sentence variety is used

Run-ons and/or fragments are rare",
                  "All Sentences are clear

Variety of sentence structure is used

Run-ons and/or fragments are not present",
                ],
                "standards": Array [],
              },
              Object {
                "description": "the mechanical correctness",
                "name": "Conventions",
                "scorePointsDescriptors": Array [
                  "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                  "Many distracting errors are present in grammar, punctuation, capitalization and/or spelling",
                  "Errors in grammar, punctuation, capitalization and/or spelling are present and some distract from meaning",
                  "Errors in grammar, punctuation, capitalization and/or spelling are present but don’t distract from meaning",
                  "Few errors in grammar, punctuation,

capitalization and/or spelling",
                ],
                "standards": Array [],
              },
              Object {
                "description": "the personal tone and flavor of the author's message",
                "name": "Voice",
                "scorePointsDescriptors": Array [
                  "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                  "Not concerned with audience or purpose

No viewpoint (perspective) used

Writing is mechanical and lifeless",
                  "Shows beginning awareness of audience/purpose

Some viewpoint (perspective) used throughout the piece

Writing is distant, too formal or informal",
                  "Awareness of audience; purpose is clear most of the time

Uses viewpoint (perspective) throughout most of the paper

Writing is pleasant, agreeable and satisfying",
                  "Powerful connection with audience; purpose is clearly communicated

Maintains strong viewpoint (perspective) throughout entire piece

Writing is expressive, engaging and has lots of energy",
                ],
                "standards": Array [],
              },
            ],
          }
        }
        scaleIndex={0}
        showDescription={false}
        showLevelTagInput={false}
        showScorePointLabels={true}
        showStandards={false}
        width="730px"
      />
      <WithStyles(Scale)
        classes={Object {}}
        configuration={
          Object {
            "dragAndDrop": Object {
              "enabled": false,
              "label": "Enable Drag and Drop",
              "settings": false,
            },
            "showDescription": Object {
              "enabled": false,
              "label": "Show Description",
              "settings": true,
            },
            "showExcludeZero": Object {
              "enabled": false,
              "label": "Exclude Zero",
              "settings": true,
            },
            "showHalfScoring": Object {
              "enabled": false,
              "label": "Half Scoring",
              "settings": true,
            },
            "showLevelTagInput": Object {
              "enabled": false,
              "label": "Show Level Tag Input",
              "settings": true,
            },
            "showScorePointLabels": Object {
              "enabled": false,
              "label": "Show Score Point Labels",
              "settings": true,
            },
            "showStandards": Object {
              "enabled": false,
              "label": "Show Standards",
              "settings": false,
            },
            "showVisibleToStudent": Object {
              "enabled": false,
              "label": "Visible to Student",
              "settings": true,
            },
          }
        }
        enableDragAndDrop={false}
        excludeZero={true}
        key="scale-1"
        model={
          Object {
            "description": false,
            "element": "multi-trait-rubric",
            "excludeZero": true,
            "halfScoring": false,
            "id": "1",
            "pointLabels": true,
            "scales": Array [
              Object {
                "maxPoints": 4,
                "scorePointsLabels": Array [
                  "Non-Scorable",
                  "Developing",
                  "Progressing",
                  "Effective",
                  "Strong",
                ],
                "traitLabel": "Trait",
                "traits": Array [
                  Object {
                    "description": "the main message",
                    "name": "Ideas",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Topic undefined and/or difficult to follow

Details are unclear",
                      "Topic too broad

Details are limited",
                      "Writing stays on topic

Complete details given",
                      "Strong control of topic

Relevant, accurate, specific details that support topic",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the internal structure of the piece",
                    "name": "Organization",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Does not have a beginning, middle and/or end

Does not have a lead and/or conclusion

Transitions confusing and/or not present

Not written in logical order

No sign of paragraphing / incorrect paragraphing",
                      "Weak beginning, middle and end

Has evidence of a lead and/or conclusion but missing elements

Transitions are used sometimes

Some logical order

Most paragraphing incorrect",
                      "Has an acceptable beginning, middle and end

Includes a lead and conclusion

Transitions are used correctly

Mostly logical order

Mostly correct paragraphing",
                      "Has an effective beginning, middle and end

Powerful introduction / lead and conclusion

Effective transitions

Logical order / sequencing

Uses appropriate paragraphing",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the vocabulary a writer chooses to convey meaning",
                    "name": "Word Choice",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Vocabulary is limited/used incorrectly

No figurative language; words do not convey meaning",
                      "Generally correct words

Attempt at figurative language

and/or words convey general meaning",
                      "Some active verbs and precise nouns

Effective use of figurative language and/or words that enhance meaning",
                      "Powerful and engaging words

Artful use of figurative language and/or sensory detail",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the rhythm and flow of the language",
                    "name": "Sentence Fluency",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "No sentences are clear

No variety in sentence structure

Frequent run-ons and/or fragments are present",
                      "Some sentences are clear

Sentence variety used rarely

Some run-ons and/or fragments are present",
                      "Most sentences are clear

Some sentence variety is used

Run-ons and/or fragments are rare",
                      "All Sentences are clear

Variety of sentence structure is used

Run-ons and/or fragments are not present",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the mechanical correctness",
                    "name": "Conventions",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Many distracting errors are present in grammar, punctuation, capitalization and/or spelling",
                      "Errors in grammar, punctuation, capitalization and/or spelling are present and some distract from meaning",
                      "Errors in grammar, punctuation, capitalization and/or spelling are present but don’t distract from meaning",
                      "Few errors in grammar, punctuation,

capitalization and/or spelling",
                    ],
                    "standards": Array [],
                  },
                  Object {
                    "description": "the personal tone and flavor of the author's message",
                    "name": "Voice",
                    "scorePointsDescriptors": Array [
                      "Student’s response is blank, not in English, not legible, or does not respond to the prompt.",
                      "Not concerned with audience or purpose

No viewpoint (perspective) used

Writing is mechanical and lifeless",
                      "Shows beginning awareness of audience/purpose

Some viewpoint (perspective) used throughout the piece

Writing is distant, too formal or informal",
                      "Awareness of audience; purpose is clear most of the time

Uses viewpoint (perspective) throughout most of the paper

Writing is pleasant, agreeable and satisfying",
                      "Powerful connection with audience; purpose is clearly communicated

Maintains strong viewpoint (perspective) throughout entire piece

Writing is expressive, engaging and has lots of energy",
                    ],
                    "standards": Array [],
                  },
                ],
              },
              Object {
                "maxPoints": 2,
                "scorePointsLabels": Array [
                  "Non-Scorable",
                  "Unsatisfactory",
                  "Satisfactory",
                ],
                "traitLabel": "Category",
                "traits": Array [
                  Object {
                    "description": "",
                    "name": "Presentation",
                    "scorePointsDescriptors": Array [
                      "Handwriting is unreadable, or response is blank, not in English, or too brief to evaluate. ",
                      "Handwriting poor

Overall appearance is distracting to unacceptable",
                      "Handwriting is generally legible

Overall appearance is acceptable or better",
                    ],
                    "standards": Array [],
                  },
                ],
              },
            ],
            "standards": false,
            "visibleToStudent": true,
          }
        }
        onScaleChanged={[Function]}
        onScaleRemoved={[Function]}
        scale={
          Object {
            "maxPoints": 2,
            "scorePointsLabels": Array [
              "Non-Scorable",
              "Unsatisfactory",
              "Satisfactory",
            ],
            "traitLabel": "Category",
            "traits": Array [
              Object {
                "description": "",
                "name": "Presentation",
                "scorePointsDescriptors": Array [
                  "Handwriting is unreadable, or response is blank, not in English, or too brief to evaluate. ",
                  "Handwriting poor

Overall appearance is distracting to unacceptable",
                  "Handwriting is generally legible

Overall appearance is acceptable or better",
                ],
                "standards": Array [],
              },
            ],
          }
        }
        scaleIndex={1}
        showDescription={false}
        showLevelTagInput={false}
        showScorePointLabels={true}
        showStandards={false}
        width="730px"
      />
      <WithStyles(Component)
        onClick={[Function]}
      >
        Add Scale
      </WithStyles(Component)>
    </div>
  </ConfigLayout>
  <WithStyles(RawExcludeZeroDialog)
    cancel={[Function]}
    changeExcludeZero={[Function]}
    open={false}
  />
  <WithStyles(RawIncludeZeroDialog)
    cancel={[Function]}
    changeExcludeZero={[Function]}
    open={false}
  />
</div>
`;

exports[`Main snapshot renders without scales 1`] = `
<div>
  <ConfigLayout
    settings={
      <Panel
        configuration={
          Object {
            "dragAndDrop": Object {
              "enabled": false,
              "label": "Enable Drag and Drop",
              "settings": false,
            },
            "showDescription": Object {
              "enabled": false,
              "label": "Show Description",
              "settings": true,
            },
            "showExcludeZero": Object {
              "enabled": false,
              "label": "Exclude Zero",
              "settings": true,
            },
            "showHalfScoring": Object {
              "enabled": false,
              "label": "Half Scoring",
              "settings": true,
            },
            "showLevelTagInput": Object {
              "enabled": false,
              "label": "Show Level Tag Input",
              "settings": true,
            },
            "showScorePointLabels": Object {
              "enabled": false,
              "label": "Show Score Point Labels",
              "settings": true,
            },
            "showStandards": Object {
              "enabled": false,
              "label": "Show Standards",
              "settings": false,
            },
            "showVisibleToStudent": Object {
              "enabled": false,
              "label": "Visible to Student",
              "settings": true,
            },
          }
        }
        groups={
          Object {
            "Properties": Object {
              "description": undefined,
              "pointLabels": undefined,
            },
            "Settings": Object {
              "dragAndDrop.enabled": false,
              "excludeZero": undefined,
              "halfScoring": undefined,
              "showLevelTagInput.enabled": undefined,
              "standards": false,
              "visibleToStudent": undefined,
            },
          }
        }
        model={
          Object {
            "description": false,
            "element": "multi-trait-rubric",
            "excludeZero": true,
            "halfScoring": false,
            "id": "1",
            "pointLabels": true,
            "scales": Array [],
            "standards": false,
            "visibleToStudent": true,
          }
        }
        onChangeModel={[Function]}
      />
    }
  >
    <div
      style={
        Object {
          "width": "730px",
        }
      }
    >
      <WithStyles(Component)
        onClick={[Function]}
      >
        Add Scale
      </WithStyles(Component)>
    </div>
  </ConfigLayout>
  <WithStyles(RawExcludeZeroDialog)
    cancel={[Function]}
    changeExcludeZero={[Function]}
    open={false}
  />
  <WithStyles(RawIncludeZeroDialog)
    cancel={[Function]}
    changeExcludeZero={[Function]}
    open={false}
  />
</div>
`;
